--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,35 @@
 }
 
 .round-button {
-    width: 20vw;
-    border-radius: 100%;
+    /* width: 20vw;
+    height: 20vh; */
+    position: absolute bottom right;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: red;
+    height: 50px;
+}
+
+.purple {
+    background-color: purple;
+    height: 50px;
+}
+
+.yellow {
+    background-color: yellow;
+    height: 50px;
+}
+
+.pink {
+    background-color: pink;
+    height: 50px;
+}
+
+.bottom-button {
+    width: auto;
+    position: relative;
+    border-radius: 50%;
+    right: 0;
 }
